2013-02-22
----------

Initial commit of the basic structure
of the library, including the two first
generators: parisi-rapuano and WELL512

Added the Makefile and the Changelog