@@ -1,3 +1,10 @@
+2013-03-01
+----------
+
+Changed the form of the WELL generator after
+I discovered how it worked
+
+
 2013-02-22
 ----------
 
